--- a/src/main/resources/blackjack.fxml
+++ b/src/main/resources/blackjack.fxml
@@ -1,25 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.*?>
-<?import javafx.scene.paint.*?>
-<?import javafx.scene.shape.*?>
-<?import java.lang.*?>
 <?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.shape.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.itstep.ui.controller.BlackjackController">
+<AnchorPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.itstep.ui.controller.BlackjackController">
    <children>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#12725b" height="600.0" stroke="BLACK" strokeType="INSIDE" width="579.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="251.0" AnchorPane.topAnchor="0.0" />
       <Label fx:id="lblBlackJack" layoutX="145.0" layoutY="265.0" text="Black Jack" textFill="WHITE" AnchorPane.bottomAnchor="265.0" AnchorPane.leftAnchor="145.0" AnchorPane.topAnchor="265.0">
          <font>
             <Font size="48.0" />
-         </font>
-      </Label>
-      <Label fx:id="lblDealer" layoutX="249.0" layoutY="14.0" text="Dealer: 0" textFill="WHITE" AnchorPane.leftAnchor="249.0" AnchorPane.topAnchor="14.0">
-         <font>
-            <Font name="Roboto" size="18.0" />
          </font>
       </Label>
       <Rectangle arcHeight="5.0" arcWidth="5.0" height="600.0" layoutX="579.0" stroke="BLACK" strokeType="INSIDE" width="251.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="579.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
@@ -48,7 +40,7 @@
             <Font name="Roboto" size="18.0" />
          </font>
       </Label>
-      <Label fx:id="lblCash" layoutX="666.0" layoutY="14.0" text="Cash: 1000" textFill="WHITE">
+      <Label fx:id="lblCash" layoutX="667.0" layoutY="20.0" text="Cash: 1000" textFill="WHITE">
          <font>
             <Font name="Roboto" size="18.0" />
          </font>
@@ -63,5 +55,10 @@
          <opaqueInsets>
             <Insets right="5.0" />
          </opaqueInsets></HBox>
+      <Label fx:id="lblDealer" layoutX="262.0" layoutY="22.0" text="Dealer: 0" textFill="WHITE">
+         <font>
+            <Font name="Roboto" size="18.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
